@@ -49,9 +49,12 @@ class ScintillaTextCtrl : public wxStyledTextCtrl {
 public:
 	wxString GetWordAtPosition(int pos);
 	void GetBoundsOfWordAtPosition(int pos,int &start,int &end);
-	void SetUnicodeStyling(int start,int length,int style);
 	int GetUnicodePosition(int pos);
 	int GetReverseUnicodePosition(int pos);
+	wxString GetValue() { return GetText(); }
+
+	void StartUnicodeStyling(int start,int mask=31);
+	void SetUnicodeStyling(int start,int length,int style);
 	void SetSelectionU(int start,int end);
 
 	ScintillaTextCtrl(wxWindow* parent, wxWindowID id, const wxString& value = _T(""), const wxPoint& pos = wxDefaultPosition, const wxSize& size = wxDefaultSize, long style = 0, const wxValidator& validator = wxDefaultValidator, const wxString& name = wxTextCtrlNameStr);
