@@ -146,6 +146,7 @@ Please visit http://aegisub.net to download latest version
 - Fixed display of end frames on the subtitles grid, when set to frame mode. (demi)
 - Treat comments inside {}'s as plain text, not as overrides; Also, don't assume override blocks start with a backslash, even if they probably should (Dansolo)
 - Removed FexTracker due to licensing problems; there are plans to implement a new motion tracker in its place (jfs)
+- Changed translation assistent to use Scintilla text controls to avoid several issues, including Right-To-Left text entry.
 
 
 = 1.10 beta - 2006.08.07 ===========================
